--- a/index.html
+++ b/index.html
@@ -55,17 +55,20 @@
             <section class="restaurants" id="restaurants">
                 <h2>Restaurants</h2>
                 <div class="cards">
-                    <div class="card">
-                        <div class="new-badge">Nouveau</div>
-                        <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
-                        <div class="card-content">
-                            <div class="text-container">
-                                <h3>La palette du goût</h3>
-                                <p>Ménilmontant</p>
+                    <a href="./restaurants/menu1.html" class="card-link">
+                        <div class="card">
+                            <div class="new-badge">Nouveau</div>
+                            <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
+                            <div class="card-content">
+                                <div class="text-container">
+                                    <h3>La palette du goût</h3>
+                                    <p>Ménilmontant</p>
+                                </div>
+                                <span class="like-icon"></span>
                             </div>
-                            <span class="like-icon"></span>
                         </div>
-                    </div>
+                    </a>
+                    <a href="./restaurants/menu3.html" class="card-link">
                     <div class="card">
                         <div class="new-badge">Nouveau</div>
                         <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2">
@@ -77,6 +80,8 @@
                             <span class="like-icon"></span>
                         </div>
                     </div>
+                    </a>
+                    <a href="./restaurants/menu4.html" class="card-link">
                     <div class="card">
                         <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 1">
                         <div class="card-content">
@@ -87,6 +92,8 @@
                             <span class="like-icon"></span>
                         </div>
                     </div>
+                    </a>
+                    <a href="./restaurants/menu2.html" class="card-link">
                     <div class="card">
                         <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 1">
                         <div class="card-content">
@@ -97,6 +104,7 @@
                             <span class="like-icon"></span>
                         </div>
                     </div>
+                    </a>
                 </div>
             </section>
         </main>
@@ -112,7 +120,7 @@
                     <a href="#">Devenir partenaire</a>
                 </div>
                 <a href="#">Mentions légales</a>
-                <a href="#">Contact</a>
+                <a href="mailto:contact@ohmyfood.com">Contact</a>
             </div>
         </footer>
     </div>
